fixing alignment issues for mobile layout

--- a/resume_layout.css
+++ b/resume_layout.css
@@ -36,7 +36,7 @@ aside {
 	#wrapper {
 		grid-gap: 10px;
 		min-width: 100%;
-		padding: 60px;
+		padding: 5%;
 		margin: 0px;
 	}	
 
